<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8526424746248325/3451734096</string>
    <string name="app_name">ZhuhaiBus</string>
    <string name="bus_company">Zhuhai Bus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="feedback">Feedback</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="check_updates">Check Updates</string>
    <string name="nav_others">Others</string>
    <string name="bus_line">Bus Line:</string>
    <string name="my_favorites">My favorites:</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_search_result">SEARCH RESULT</string>
    <string name="search_line_api_url">Search bus line Api URL</string>
    <string name="search_online_bus_api_url">Search online bus Api URL</string>
    <string name="search_station_api_url">Search station Api URL</string>
    <string name="api_settings">API settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="settings_auto_flush_wait_time">Auto-Refurbish time</string>
    <string name="settings_search_line_api_url_summary">Line search API </string>
    <string name="settings_auto_flush_wait_time_summary">Setting Auto-Refurbish time.If value is 0 will disable.</string>
    <string name="settings_search_online_bus_api_url_summary">Bus search API</string>
    <string name="settings_search_station_api_url_summary">Station search API</string>
    <string name="main_error_bus_line_null">Oops...Line number is empty.</string>
    <string name="main_error_bus_line_invalid">Oops...Line number is invalid.</string>
    <string name="error_api_invalid">API setting is invaild.</string>
    <string name="connect_server_message">Please wait....</string>
    <string name="network_error">Cannot connect to Internet.</string>
    <string name="search_result_add_to_favorite">Favorite</string>
    <string name="search_result_search">Search</string>
    <string name="search_result_price">Price: CNY </string>
    <string name="okay">OK</string>
    <string name="settings_auto_flush_notice_title">Auto-Refurbish notice</string>
    <string name="settings_auto_flush_notice_summary">We will notice after Auto-refurbish.</string>
    <string name="title_activity_online_bus">Detail</string>
    <string name="title_activity_favorite">Favorite Line</string>

    <string-array name="select_icons">
        <item>Month and face (Apple)</item>
        <item>Month and face (Google)</item>
        <item>Round (Material)</item>
        <item>Bus (Material)</item>
        <item>Bus (Classic)</item>
        <item>None</item>
    </string-array>
    <string-array name="select_icons_value">
        <item>apple_moon_emoji</item>
        <item>google_moon_emoji</item>
        <item>md_circle</item>
        <item>md_bus</item>
        <item>classic_bus</item>
        <item>none</item>
    </string-array>
    <string name="settings_title_is_bus_title">Swap displays</string>
    <string name="settings_title_is_bus_summary">Exchange position station name and bus number .</string>
    <string name="manage_item">Manage</string>
    <string name="favorite_bus_null">You have not favorite line.</string>
    <string name="clear_all">Reset All</string>
    <string name="title_activity_feed_back">Feedback</string>
    <string name="action_settings">Settings</string>

    <string name="new_update">New Update!</string>
    <string name="current_ver">Current version:</string>
    <string name="latest_ver">Latest version:</string>
    <string name="update_change">Changelog:</string>
    <string name="update_now">Update Now!</string>
    <string name="update_broswer">Download</string>
    <string name="cancel">Cancel</string>
    <string name="check_title">Please waiting</string>
    <string name="checking">Checking update..</string>
    <string name="latest_title">Latest</string>
    <string name="current_latest">Your version is latest.</string>
    <string name="cannot_get_current_ver">We cannot get your current version.</string>
    <string name="update_server_error">Update server error</string>
    <string name="yi">Oops..</string>

    <string name="tab_unavailable">Oops..The tab is unavailable.</string>
    <string name="error">Error</string>
    <string name="unknown_error">Unknown Error: </string>
    <string name="open_the_link">Please open the link: </string>
    <string name="to_issue">to create a new issue.</string>
    <string name="about_title">About</string>
    <string name="loading">Loading...</string>
    <string name="waiting">Please wait</string>
    <string name="do_not_display_ad">Do not show ads</string>
    <string name="do_not_display_ad_summary">I hate ads! Please don\'t show them.</string>
    <string name="success">Success!</string>
    <string name="open_source_license">OPEN SOURCE LICENSE</string>
    <string name="confirm">Confirm?</string>
    <string name="search_line_upper" translatable="false">搜索线路转换成大写</string>
</resources>
