<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/api_settings">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="http://www.zhbuswx.com/Handlers/BusQuery.ashx"
            android:inputType="textCapWords"
            android:key="bus_api"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/search_line_api_url"
            android:summary="@string/settings_search_line_api_url_summary" />

        <SwitchPreference
            android:key="enable_static_ip"
            android:defaultValue="true"
            android:summary="预解析 IP 能够免去 DNS 查询所需的时间，加速查询公交的速度。如果发现无法查询时，请关闭此功能。"
            android:title="开启预解析 IP" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="120.25.149.162"
            android:inputType="textCapWords"
            android:key="static_ip"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="预解析 IP"
            android:summary="请在里面填写有效的 IP 地址" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_settings">
        <SwitchPreference
            android:key="auto_upper"
            android:summary="自动江搜索的线路从小写转换成大写以避免小写字母搜不到的情况，请视情况开关此选项。"
            android:title="@string/search_line_upper"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="always_display"
            android:title="屏幕常亮"
            android:defaultValue="true" />

        <!-- <SwitchPreference
            android:defaultValue="false"
            android:title="TTS 语音到站提醒"
            android:summary="将到站的线路通过语音播报出来，需要系统支持。（仅支持简体中文）"
            android:key="enable_tts" /> -->

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="10"
            android:inputType="number"
            android:key="auto_flush_wait_time"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_auto_flush_wait_time"
            android:summary="@string/settings_auto_flush_wait_time_summary" />

        <SwitchPreference
            android:key="auto_flush_notice"
            android:summary="@string/settings_auto_flush_notice_summary"
            android:title="@string/settings_auto_flush_notice_title" />

        <SwitchPreference
            android:key="title_is_bus"
            android:summary="@string/settings_title_is_bus_summary"
            android:title="@string/settings_title_is_bus_title" />

        <ListPreference android:title="提示图标" android:entries="@array/select_icons"
            android:entryValues="@array/select_icons_value"
            android:summary="选择在公交列表中的图标用于区分有车和无车的站点"
            android:key="hint_logo" />

        <SwitchPreference
            android:key="do_not_display_ad"
            android:summary="@string/do_not_display_ad_summary"
            android:title="@string/do_not_display_ad" />
    </PreferenceCategory>
</PreferenceScreen>
