<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/menu_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/menu_favorite"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_line_listener"
            android:icon="@drawable/icon_bug"
            android:title="在线公交监控" />
    </group>

    <item android:title="@string/nav_others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_ckeck_updates"
                android:icon="@drawable/menu_updates"
                android:title="@string/check_updates" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/menu_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/menu_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
